need to fix SearchProfileShardResult